syntax = "proto3";

option java_multiple_files = true;
package fiit.vava.server;

message LoginUserRequest {
  string email = 2;
  string password = 3;
}

message Response {
  oneof response {
    User user = 1;
    string error = 2;
  }
}

message Empty {}

service UserService {
  rpc login(LoginUserRequest) returns (Response);

  rpc registerClient(Client) returns (Response);

  rpc me(Empty) returns (User);
}

enum UserState {
  PENDING = 0;
  APPROVED = 1;
  REJECRED = 2;
}

enum UserRole {
  CLIENT = 0;
  COWORKER = 1;
  ADMIN = 2;
}

message User {
  string id = 1;
  string email = 2;
  string password = 3;
  bool confirmed = 4;
  UserState status = 5;
  UserRole role = 6;
}

message Client {
  string id = 1;
  User user = 2;
  optional string registration_date = 3;
  string firstName = 4;
  string lastName = 5;
  string dateOfBirth = 6;
  string region = 7;
  string country = 8;
}